syntax = "proto3";

package types;
option go_package = "github.com/jcalabro/atlas/internal/types";

import "google/protobuf/timestamp.proto";

//
// Types stored in FoundationDB
//

message Actor {
  string did = 1;
  google.protobuf.Timestamp created_at = 2;
  string email = 3;
  string email_verification_code = 4;
  bool email_confirmed = 5;
  bytes password_hash = 6;
  bytes signing_key = 7;
  string handle = 8;
  bool active = 9;
  repeated bytes rotation_keys = 10;
  repeated RefreshToken refresh_tokens = 11;
  string head = 12;
  string rev = 13;
  string pds_host = 14; // hostname of the PDS this actor belongs to
  bytes preferences = 15; // JSON-encoded user preferences
}

// Blob stores metadata about an uploaded blob
message Blob {
  string did = 1;           // DID of the owner
  bytes cid = 2;            // CID of the blob content
  string mime_type = 3;     // MIME type of the blob
  int64 size = 4;           // size in bytes
  google.protobuf.Timestamp created_at = 5;
}

message RefreshToken {
  string token = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp expires_at = 3;
}

// Record represents a single record in a user's repo
message Record {
  string did = 1;
  string collection = 2;  // NSID, e.g. "app.bsky.feed.post"
  string rkey = 3;        // record key (TID or user-specified)
  string cid = 4;         // CID of the record content
  bytes value = 5;        // CBOR-encoded record data
  google.protobuf.Timestamp created_at = 6;
}

//
// Firehose event types for com.atproto.sync.subscribeRepos
//

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0; // treated as commit for backwards compatibility
  EVENT_TYPE_COMMIT = 1;
  EVENT_TYPE_IDENTITY = 2;
  EVENT_TYPE_ACCOUNT = 3;
}

// RepoEvent represents an event to be streamed via the firehose.
// Stored in FDB with a versionstamp key for global ordering.
// Can be a commit, identity, or account event based on event_type.
message RepoEvent {
  // Sequence number assigned by FDB versionstamp (set after commit)
  int64 seq = 1;

  // The PDS host this event originated from
  string pds_host = 2;

  // The repo (DID) that was modified (for commits) or the DID (for identity/account)
  string repo = 3;

  // The new revision after this commit (commits only)
  string rev = 4;

  // The previous revision (nil for first commit) (commits only)
  string since = 5;

  // CID of the commit object (commits only)
  bytes commit = 6;

  // CAR file containing the blocks for this commit (commits only)
  bytes blocks = 7;

  // Operations performed in this commit (commits only)
  repeated RepoOp ops = 8;

  // Timestamp of the event
  google.protobuf.Timestamp time = 9;

  // Whether this commit is too big to include blocks inline (commits only)
  bool too_big = 10;

  // Type of event (commit, identity, account)
  EventType event_type = 11;

  // Handle for identity events
  string handle = 12;

  // Account active status for account events
  bool active = 13;

  // Account status string for account events (e.g. "active", "suspended", "deleted")
  string status = 14;
}

// RepoOp represents a single operation within a commit
message RepoOp {
  // Action: "create", "update", or "delete"
  string action = 1;

  // Path in the repo: "collection/rkey"
  string path = 2;

  // CID of the record (nil for deletes)
  bytes cid = 3;
}
